# Library.Components.ROS

./: ContributedComponents.md  README.md  docker_retag.py  generate_readme.py  generate_table.py  instructions.md
audio_say/docker/audio_say/src/ros_audio_launch/: CMakeLists.txt
audio_say/docker/audio_say/src/say/: CMakeLists.txt  package.xml  say_node.py
bboxes-to-3d-markers/docker/boxes_objects_to_marker_array/objecst_poses_estimation/: package.xml
bboxes-to-3d-markers/docker/boxes_objects_to_marker_array/objecst_poses_estimation/src/: objects_pose_estimation_node.cpp
circle-detection/docker/circle_detection/: CMakeLists.txt
cogniteam-anomaly-detection/docker/anomaly_ws/src/msg_convertor/: CMakeLists.txt
cogniteam-anomaly-detection/docker/anomaly_ws/src/msg_convertor/include/: msg_convertor.h
cogniteam-anomaly-detection/docker/anomaly_ws/src/msg_convertor/src/: msg_convertor.cpp
cogniteam-merge-videos/docker/cogniteam-merge-videos/: package.xml
cogniteam-person-follower-rgb/docker/person_follower_rgb/bbox_convertor/: CMakeLists.txt
cogniteam-random-goals/docker/src/adventech_random_goals/: CMakeLists.txt
cogniteam-skeleton-gestures/docker/person_skeleton_follower/: CMakeLists.txt  package.xml
components/bboxes-to-3d-markers/docker/boxes_objects_to_marker_array/objecst_poses_estimation/: CMakeLists.txt
components/bboxes-to-3d-markers/docker/boxes_objects_to_marker_array/objecst_poses_estimation/include/: ObjectsPoseEstimation.h
components/bboxes-to-3d-markers/docker/boxes_objects_to_marker_array/objecst_poses_estimation/launch/: objects_poses_estimations.launch
components/cogniteam-image-rotate-filp/docker/cogniteam-image-rotate-filp/: CMakeLists.txt  package.xml
components/cogniteam-image-rotate-filp/docker/cogniteam-image-rotate-filp/src/: image_rotate_filp_node.cpp
components/cogniteam-merge-videos/docker/cogniteam-merge-videos/: CMakeLists.txt
components/cogniteam-merge-videos/docker/cogniteam-merge-videos/cfg/: Video.cfg
components/cogniteam-merge-videos/docker/cogniteam-merge-videos/launch/: merge_videos.launch
components/cogniteam-merge-videos/docker/cogniteam-merge-videos/src/: merge_videos_node.cpp
components/cogniteam-person-follower-rgb/docker/person_follower_rgb/nvidia_skeleton_to_bbox_convertor/: CMakeLists.txt  package.xml
components/cogniteam-person-follower-rgb/docker/person_follower_rgb/nvidia_skeleton_to_bbox_convertor/src/: nvidia_to_bbox_convertor_node.cpp
components/cogniteam-person-follower-rgb/docker/person_follower_rgb/person_follower_rgb/: CMakeLists.txt  package.xml
components/cogniteam-person-follower-rgb/docker/person_follower_rgb/person_follower_rgb/launch/: person_follower_rgb.launch
components/cogniteam-person-follower-rgb/docker/person_follower_rgb/person_follower_rgb/src/: perosn_follower_rgb_node.cpp
components/depth-2-grayscale/docker/depth_to_grayscale/: CMakeLists.txt
components/depth-2-grayscale/docker/depth_to_grayscale/include/depth_to_grayscale/: DepthToGrayscaleConvertor.h
components/depth-2-grayscale/docker/depth_to_grayscale/launch/: depth_to_grayscale.launch
components/depth-2-grayscale/docker/depth_to_grayscale/src/depth_to_grayscale/: DepthToGrayscaleConvertor.cpp  depth_to_grayscale_node.cpp
components/depth-2-pcloud/docker/depth_to_pcloud_scan/: CMakeLists.txt  package.xml
components/depth-2-pcloud/docker/depth_to_pcloud_scan/launch/: depth_to_pcloud_scan.launch
components/depth-2-pcloud/docker/depth_to_pcloud_scan/src/depth_to_pcloud_scan/: depth_to_pcloud_scan_node.cpp
components/hamster-driver/docker/hamster_driver/: CMakeLists.txt
components/hamster-driver/docker/hamster_driver/launch/: hamster_driver.launch
components/hamster-driver/docker/hamster_driver/src/: hamster_imu_calibration_node.cpp
components/hamster-driver/docker/hamster_driver/src/calibration/: AutoImuCalibrator.cpp  RobotStateEstimator.cpp
components/hamster-driver/docker/hamster_driver/test/: calibration_tests.cpp
components/hamster-v8-environment/docker/src/hamster_driver/: package.xml
components/hamster-v8-environment/docker/src/hamster_driver/launch/: hamster_driver.launch
components/hamster-v8-environment/docker/src/hamster_driver/src/: WirelessInfo.cpp
components/hamster-v8-environment/docker/src/object_detection/: CMakeLists.txt
components/hamster-v8-environment/docker/src/object_detection/src/: labels.txt  object_detection_node.py
components/hamster-wandering/docker/hamster_wandering/: CMakeLists.txt  package.xml
components/hamster-wandering/docker/hamster_wandering/rviz/: debug.rviz  mrm_wandering.rviz
components/hamster-wandering/docker/hamster_wandering/src/: CostMap.cpp  SimpleTrajectoryMatcher.cpp  TrajectorySimulator.cpp  Wandering.cpp
components/image-republisher/docker/img_republisher/: CMakeLists.txt  package.xml
components/image-republisher/docker/img_republisher/launch/: img_republisher.launch
components/lynx/docker/lynx/lynx_launch/: CMakeLists.txt  package.xml
components/lynx/docker/lynx/lynx_launch/launch/: lynx.launch
components/lynx/docker/lynx/lynx_launch/params/: costmap.yaml  pipeline.yaml
components/lynx/docker/lynx/lynx_launch/scripts/: delayed_run.sh  http_server.sh
components/path-publisher/docker/path_publisher/: CMakeLists.txt
components/path-publisher/docker/path_publisher/include/path_publisher/: PathPublisher.h
components/path-publisher/docker/path_publisher/launch/: path_publisher.launch
components/path-publisher/docker/path_publisher/src/: path_publisher_node.cpp
faces-landsmarks-mediapipe/docker/face_landsmark/: CMakeLists.txt  package.xml
lynx/docker/lynx/lynx_localization/: CMakeLists.txt  package.xml
lynx/docker/lynx/lynx_localization/src/: ComplimentaryFilter.cpp  LynxGpsLocalization.cpp  lynx_map_graph_builder.cpp
path-publisher/docker/path_publisher/: package.xml
spot-bridge/docker/cogniteam-packages/cogniteam_bridge/: CMakeLists.txt
spot-bridge/docker/cogniteam-packages/cogniteam_bridge/scripts/: action_listener_node.py
spot-bridge/docker/cogniteam-packages/image_rotator/: package.xml
(+1034 files in other folders)
