<?xml version="1.0"?>
<package>
  <name>merge_videos</name>
  <version>1.0.0</version>
  <description>The merge_videos package</description>
  <maintainer email="yakir@cogniteam.com">yakir huri</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roslib</build_depend> 
  <build_depend>cv_bridge</build_depend> 
  <build_depend>image_transport</build_depend>    
  <build_depend>geometry_msgs</build_depend>   
  <build_depend>tf2_geometry_msgs</build_depend>   
  <build_depend>tf2_ros</build_depend>     
  <build_depend>dynamic_reconfigure</build_depend>
  

  <run_depend>tf</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>cv_bridge</run_depend> 
  <run_depend>image_transport</run_depend> 
  <run_depend>geometry_msgs</run_depend> 
  <run_depend>dynamic_reconfigure</run_depend>





</package>
