<?xml version="1.0"?>
<package>
  <name>path_publisher</name>
  <version>1.0.0</version>
  <description>path_publisher</description>
  <maintainer email="yakir@cogniteam.com">yakir huri</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
   <run_depend>nav_msgs</run_depend>



</package>
