<?xml version="1.0"?>
<package format="2">
  <name>objects_pose_estimation</name>
  <version>1.0.0</version>
  <description>objects_pose_estimation</description>
  <maintainer email="yakir@cogniteam.com">Yakir Huri</maintainer>
  <license>Proprietary</license>
  <buildtool_depend>catkin</buildtool_depend>
  <!-- <depend>roscpp</depend>
  <depend>cv_bridge</depend>
  <depend>stereo_msgs</depend>
  <depend>message_filters</depend>
  <depend>image_geometry</depend> -->


  <build_depend>object_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>depth_image_proc</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>ackermann_msgs</build_depend>
  <build_depend>vision_msgs</build_depend>

  <build_export_depend>object_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>depth_image_proc</build_export_depend>
  <build_export_depend>angles</build_export_depend>
  <build_export_depend>ackermann_msgs</build_export_depend>
  <build_depend>vision_msgs</build_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>depth_image_proc</exec_depend>
  <exec_depend>angles</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <build_depend>vision_msgs</build_depend>

</package>
