<?xml version="1.0"?>
<package format="2">
  <name>lynx_localization</name>
  <version>0.0.0</version>
  <description>The lynx_localization package</description>

  <maintainer email="nix@todo.todo">nix</maintainer>

  <license>Proprietary</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ackermann_msgs</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geodesy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>lynx_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_export_depend>ackermann_msgs</build_export_depend>
  <build_export_depend>angles</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>geodesy</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>lynx_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>angles</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>lynx_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>geodesy</exec_depend>
</package>
