<?xml version="1.0"?>
<package format="2">
  <name>image_rotator</name>
  <version>0.0.1</version>
  <description>The image_rotator package</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build>
      <build_type>catkin</build_type>
    </build>
  </export>
</package>
